# dex

./: .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  README.md  core.go  go.mod  go.sum  install.ps1  install.sh  main.go  phases.go  plan.go  plan_test.go  proc_unix.go  proc_windows.go  release.sh  runner.go  runner_test.go  ui.go
.github/workflows/: release.yml
prompts/: bare.txt  finalize.txt  fix.txt  impl.txt  plan.txt  research.txt  review.txt  reviewers.json
src/: core.rs  main.rs  phases.rs  plan.rs  research.rs  runner.rs  ui.rs
tools/: find_single_use_functions.rs
