[package]
name = "dex"
version = "0.4.7"
edition = "2021"

[[bin]]
name = "find-single-use-functions"
path = "tools/find_single_use_functions.rs"

[dependencies]
argh = "0.1"
handlebars = "6"
termimad = "0.34"
termcolor = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
similar = "3"
which = "8"
ctrlc = "3"
shared_child = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
